--- a/tarde/estiloux/styles/style.css
+++ b/tarde/estiloux/styles/style.css
@@ -22,9 +22,13 @@ header {
 header .grid-layout {
     width: 80%;
     margin: 0 auto;
-    background-color: yellowgreen;
+    /* background-color: yellowgreen; */
 }
 
+header .header-flex {
+    display: flex;
+    justify-content: space-between;
+}
 
 header h1 {
     text-transform: lowercase;
@@ -40,10 +44,16 @@ header h1 #logoux {
     font-size: 30px;
 }
 
+header nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 300px;
+    border: 2px solid white;
+}
 
-
-
-h2 {
-    margin-bottom: 30px;
-    border: 3px solid red;
+header nav a {
+    color: white;
+    text-decoration: none;
 }
