--- a/tarde/landing-page-tarde/css/style.css
+++ b/tarde/landing-page-tarde/css/style.css
@@ -21,6 +21,13 @@
     /* border: 3px solid green; */
 }
 
+body {
+    background-color: #080324;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 16px;
+}
+
 header {
     background-color: #F9003D;
     height: 60px;
@@ -93,4 +100,52 @@ main .banner #bannerinfo p {
     font-weight: bold;
     text-transform: uppercase;
     color: #F9003D;
+}
+
+
+/* Sobre */
+.sobre {
+    padding: 60px 0;
+}
+.sobre .sobre-flex {
+    display: flex;
+    justify-content: space-between;
+    /* border: 2px solid red; */
+}
+
+.sobre .sobre-flex .sobrebox {
+    width: 500px;
+    /* border: 2px solid red; */
+}
+
+.sobre .sobre-flex .sobrebox h2 {
+    margin-bottom: 40px;
+    font-family: BebasNeue-Regular;
+    font-size: 64px;
+    color: #F9003D;
+}
+
+.sobre .sobre-flex .participantes {
+    width: 640px;
+    /* border: 2px solid red; */
+}
+
+.sobre .sobre-flex .participantes h3 {
+    margin-bottom: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.sobre .sobre-flex .participantes h4 {
+    margin-bottom: 20px;
+    font-family: BebasNeue-Regular;
+    font-size: 64px;
+    color: #FFAF00;
+}
+
+.sobre .sobre-flex .participantes p {
+    font-size: 18px;
+    line-height: 28px;
+    text-align: justify;
 }
