Finaliza os menus mobile

--- a/tarde/projeto-gamer-tarde/css/style.css
+++ b/tarde/projeto-gamer-tarde/css/style.css
@@ -1,5 +1,8 @@
 /* Imports de fonts */
-
+@font-face {
+    font-family: Inter;
+    src: url(../assets/fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
+}
 /* Reset CSS */
 
 * {
@@ -13,7 +16,15 @@
     width: 90%;
     height: 100%;
     margin: 0 auto;
-    border: 1px solid salmon;
+    /* border: 1px solid salmon; */
+}
+
+.mostrar-menu {
+    left: 0 !important;
+}
+
+.mostrar-usuarios {
+    right: 0 !important;
 }
 
 /* justify content + align items */
@@ -27,11 +38,15 @@
 body {
     color: white;
 }
+
 /* Mobile First */
 
 /* HEADER */
 header {
+    position: fixed;
+    width: 100vw;
     height: 60px;
+    z-index: 100;
     background-color: #1B1426;
 }
 
@@ -42,22 +57,73 @@ header .header-top {
 header .header-bottom {
     height: 60px;
 }
+
 header .logo {
     width: 86px;
 }
 
-header nav {
+
+header .header-bottom nav {
     position: fixed;
     top: 60px;
-    left: 0;
+    left: -80vw;
+    z-index: 101;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
     width: 80vw;
-    height: 100vh;
-    background-color: grey;
+    height: calc(100vh - 60px);
+    padding-bottom: 20px;
+    background-image: linear-gradient(to right bottom, rgba(27, 20, 38, 0.7), rgba(27, 20, 38, 0.4));
+    backdrop-filter: blur(45px);
+
+    transition: left 0.4s;
+}
+
+
+header .header-bottom nav > a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 30px 0;
+    color: white;
+    font-size: 15px;
+    font-family: Inter;
+    text-decoration: none;
+    border-bottom: 2px solid #F9AA01;
+}
+
+header .header-bottom nav a:last-of-type {
+    border-bottom: none;
+}
+
+header .header-bottom nav .midias-sociais {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    gap: 20px;
+}
+
+header .menu-usuarios {
+    position: fixed;
+    top: 60px;
+    right: -20vw;
+    width: 20vw;
+    height: 170px;
+
+    background-image: linear-gradient(to right bottom, rgba(27, 20, 38, 0.7), rgba(27, 20, 38, 0.4));
+    backdrop-filter: blur(45px);
+
+    transition: right 0.4s;    
 
     display: flex;
     flex-direction: column;
-
-}
-header .menu-usuarios {
-    display: none;
+    justify-content: space-evenly;
+    align-items: center;
 }
